--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^2.2.5",
     "monk": "^3.1.1",
     "morgan": "^1.7.0",
+    "multer": "^1.2.0",
     "serve-favicon": "~2.3.0"
   }
 }
