--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "express": "^5.0.0-alpha.2",
+    "express-session": "~1.0.0",
     "jade": "~1.11.0",
     "mongodb": "^2.2.5",
+    "mongoose" : "~3.8.1",
+    "passport" : "~0.1.17",
+    "passport-local" : "~0.1.6",
+    "connect-flash" : "~0.1.1",     
+    "bcrypt-nodejs" : "latest",
     "monk": "^3.1.1",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
