--- a/package.json
+++ b/package.json
@@ -3,25 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www2"
   },
   "dependencies": {
-    "angular-animate": "^1.6.0",
-    "bcrypt-nodejs": "latest",
+    "angular-animate": "^1.6.10",
+    "aws-sdk": "^2.229.1",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.15.2",
-    "connect-flash": "~0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "express": "^5.0.0-alpha.2",
-    "express-session": "~1.0.0",
+    "express-session": "^1.0.4",
     "jade": "~1.11.0",
+    "jade-compiler": "^0.5.1",
     "mongodb": "^2.2.5",
-    "mongoose": "~3.8.1",
+    "mongoose": "^4.10.8",
     "monk": "^3.1.1",
     "morgan": "^1.7.0",
-    "multer": "^1.2.0",
-    "passport": "~0.1.17",
-    "passport-local": "~0.1.6",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
+    "passport": "^0.1.18",
+    "passport-google-oauth": "^1.0.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^0.1.6",
+    "passport-oauth2": "file:node_modules/passport-oauth2",
+    "passport-soundcloud-token": "^2.1.1",
     "serve-favicon": "~2.3.0"
   }
 }
