--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer-s3": "^2.7.0",
     "passport": "^0.6.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-soundcloud-token": "^2.1.1",
