--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "angular-animate": "^1.6.10",
+    "angular-countries-flags": "^0.0.5",
+    "angular-country-picker": "^2.3.0",
     "aws-sdk": "^2.229.1",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.3",
@@ -18,6 +20,7 @@
     "debug": "^2.6.9",
     "express": "^4.18.2",
     "express-session": "^1.0.4",
+    "flag-icons": "^6.6.6",
     "jade": "^1.9.2",
     "jade-compiler": "^0.5.1",
     "mongodb": "^3.0.0",
@@ -26,6 +29,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "multer-s3": "^2.7.0",
+    "ng-country-select": "^0.1.4",
     "passport": "^0.6.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oidc": "^0.1.0",
