--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.3",
     "body-parser": "^1.15.2",
+    "bootstrap-icons": "^1.10.4",
     "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.13",
     "cookie-parser": "^1.4.3",
